test/errors/FNF.tec
! TECO-64 test script: Test FNF error !
! Commands: ?FNF !
! Expect: ?FNF [FNF.log] !
 
@^UA{baz}                           ! Name of non-existent input file !

@ER/^EQA/                           ! Test: open file for read !
